fixed testing page

--- a/test/test-auth-server.html
+++ b/test/test-auth-server.html
@@ -73,7 +73,7 @@
       const getAccessToken = document.getElementById("getToken");
       const accessTokenElement = document.getElementById("accessToken");
       const getToken =
-        "https://kp1nuhgxag.execute-api.us-east-1.amazonaws.com/dev/api/token/{code}";
+        "https://kp1nuhgxag.execute-api.us-east-1.amazonaws.com/dev/api/token/";
 
       getAccessToken.onclick = function () {
         let code = codeValue.value;
@@ -83,6 +83,7 @@
           code = encodeURIComponent(codeValue.value);
         }
         const getTokenRequest = getToken + code;
+        console.log({ getTokenRequest });
         fetch(getTokenRequest)
           .then(function (response) {
             return response.json();
@@ -95,7 +96,7 @@
       const getEvents = document.getElementById("getEvents");
       const events = document.getElementById("events");
       const getCalendarEvents =
-        "https://kp1nuhgxag.execute-api.us-east-1.amazonaws.com/dev/api/get-events/{access_token}";
+        "https://kp1nuhgxag.execute-api.us-east-1.amazonaws.com/dev/api/get-events/";
 
       getEvents.onclick = function () {
         const { access_token } = JSON.parse(accessTokenElement.innerText);
